<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SearchRealEstateProviderActivity">

        <!-- Price -->
        <EditText
            android:id="@+id/activity_search_real_estate_price_minimum_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
          
            android:hint="@string/minimum_price_in_dollar"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/activity_search_real_estate_price_maximum_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
          
            android:hint="@string/maximum_price_in_dollar"
            android:inputType="numberDecimal" />



        <!-- Surface -->
        <EditText
            android:id="@+id/activity_search_real_estate_surface_minimum_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
            android:hint="@string/minimum_surface_in_square_meters"
          
            android:inputType="number" />

        <EditText
            android:id="@+id/activity_search_real_estate_surface_maximum_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
            android:hint="@string/maximum_surface_in_square_meters"
          
            android:inputType="number" />



        <!-- First location (Borough or neighborhood) -->
        <EditText
            android:id="@+id/activity_search_real_estate_first_location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
            android:hint="@string/borough_or_neighborhood" />

        <!-- Number of photos -->
        <EditText
            android:id="@+id/activity_search_real_estate_number_photos_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
          
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
            android:hint="@string/minimum_number_of_photos"/>

        <EditText
            android:id="@+id/activity_search_real_estate_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
            android:hint="@string/description"/>


        <!-- Point of interest-->
        <EditText
            android:id="@+id/activity_search_real_estate_point_of_interest_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
          
            android:hint="@string/points_of_interest" />

        <!-- Entry date -->
        <EditText
            android:id="@+id/activity_search_real_estate_entry_date_since_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"
            android:hint="@string/put_on_the_market_since_in_days" />

        <!-- Sale date -->
        <EditText
            android:id="@+id/activity_search_real_estate_sale_date_since_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_search_real_estate_provider_margin"

            android:hint="@string/sale_since_in_days" />

        <!-- Button finish -->
        <Button
            android:id="@+id/activity_search_real_estate_button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners"
            android:text="@string/search"
            android:textColor="@android:color/white"
            app:backgroundTint="#69F0AE" />
    </LinearLayout>
</ScrollView>
